envoy.yaml
static_resources:
  listeners:
   - name: http_listener
     address:
       socket_address:
         address: 0.0.0.0
         port_value: 7777
     filter_chains:
     - filters:
       - name: "envoy.http_connection_manager"
         config:
            stat_prefix: ingress_http
            http_filters:
            - name: envoy.router
            route_config:
              virtual_hosts:
              - name: blah
                domains: '*'
                routes:
                - match:
                    prefix: /
                  route:
                    cluster: banana
  clusters:
  - name: banana
    type: strict_dns
    connect_timeout: 1s
    load_assignment:
      cluster_name: some_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: host.docker.internal 
                port_value: 8000
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}
